--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="jumbotron">
+      <div class="container">
+        <div class="row">
+          <h2 id="counter">0</h2>
+        </div>
+        <div class="row">
+          <button id="inc" class="btn btn-primary btn-lg mx-2">+</button>
+          <button id="dec" class="btn btn-info btn-lg">-</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
