--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,8 @@
         </div>
         <div class="row">
           <button id="inc" class="btn btn-primary btn-lg mx-2">+</button>
-          <button id="dec" class="btn btn-info btn-lg">-</button>
+          <button id="dec" class="btn btn-info btn-lg mr-2">-</button>
+          <button id="rnd" class="btn btn-outline-danger btn-lg">Random</button>
         </div>
       </div>
     </div>
