--- a/public/index.html
+++ b/public/index.html
@@ -34,17 +34,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="jumbotron">
-      <div class="container">
-        <div class="row">
-          <h2 id="counter">0</h2>
-        </div>
-        <div class="row">
-          <button id="inc" class="btn btn-primary btn-lg mx-2">+</button>
-          <button id="dec" class="btn btn-info btn-lg mr-2">-</button>
-          <button id="rnd" class="btn btn-outline-danger btn-lg">Random</button>
-        </div>
-      </div>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
